# py4siesta

./: .gitignore  AGENTS.md  README.MD  cli.py  operations.py  pyproject.toml  run.py
NanoCore/: siesta2.py
py4siesta/: __init__.py  agent_cli.py  cli.py  operations.py  post_process.py
ref/: pldos.py  siestaband.py
scripts/: 1dline.py  2dsurf.py  add_ion.py  addcell.py  atompdos.py  clean.sh  diff_2dsurf.py  dos.py  dvh.py  fdf2add.py  fdf2attach.py  fdf2center.py  fdf2expand.py  fdf2extend.py  fdf2fixed.py  fdf2interp.py  fdf2move.py  fdf2pos.py  fdf2remove.py  fdf2revert.py  fdf2rotate.py  fdf2sort.py  fdf2translate.py  fdf2xcrysden.py  fdf2xyz.py  fmpdos.py  gap.py  grid.py  mav2vh.py  msband.py  pav2dvh.py  pav2dvh_align.py  pav2rho.py  pav2vh.py  pldos.py  pos2primitive.py  rad2vh.py  rho2xsf.py  scale_rho.py  siesta_double_band.py  (+14 more)
test/: test_agent_cli.py
test/diamond/origin/: slm_siesta_run_b4
test/heterojunction/origin/: slm_siesta_run_new
test/heterojunction/origin/input/: BASIS.fdf  C.psf  KPT.fdf  RUN.fdf  STRUCT.fdf
test/post-process/band-structure/: cal.node_done
test/post-process/band-structure/input/: BASIS.fdf  In.ion  N.ion  POSCAR  RUN.fdf  Sb.ion
test/post-process/pdos/: cal.node_done  nodelist  slm_siesta_run_b4  stdout.txt
test/post-process/pdos/input/: BASIS.fdf  Mg.ion  RUN.fdf
test/post-process/pldos/: cal.node_done  nodelist  slm_siesta_run_b4  slm_siesta_run_b4.e344042  slm_siesta_run_b4.e344044  stdout.txt
test/post-process/pldos/input/: BASIS.fdf  KPT.fdf  POSCAR  Ru.psf  STRUCT.fdf  Sr.psf  macroave.in
