[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "py4siesta"
version = "1.0.0"
description = "Utilities and CLI helpers for preparing SIESTA calculations"
readme = "README.MD"
requires-python = ">=3.9"
dependencies = [
  "matplotlib",
  "numpy",
  "scipy",
]

[project.scripts]
py4siesta = "py4siesta.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["py4siesta", "NanoCore"]
