[build-system]
requires = ["setuptools>=61", "wheel<0.45"]
build-backend = "setuptools.build_meta"

[project]
name = "py4siesta"
version = "1.0.0"
description = "Utilities and CLI helpers for preparing SIESTA calculations"
readme = "README.MD"
requires-python = ">=3.7"
dependencies = [
  "matplotlib",
  "numpy",
  "scipy",
]

[project.scripts]
py4siesta = "py4siesta.cli:main"
py4siesta-tool = "py4siesta.agent_cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["py4siesta", "NanoCore"]
